--- a/index.html
+++ b/index.html
@@ -72,6 +72,29 @@
             </div>
         </div>
     </section>
+    <section id="projetos3d" class="section-3d">
+        <div class="container">
+            <span class="subtitle">Planejamento</span>
+            <h2>Do 3D à Realidade</h2>
+            <div class="grid-3d">
+                <div class="card-3d">
+                    <div class="badge">Projeto 3D</div>
+                    <img src="https://images.unsplash.com/photo-1617103996702-96ff29b1c467?q=80&w=1600&auto=format&fit=crop" alt="Renderização 3D">
+                    <p>Visualização realista com texturas e iluminação fiel ao projeto final.</p>
+                </div>
+                <div class="content-3d">
+                    <h3>Tecnologia de Visualização</h3>
+                    <p>Cada ambiente na Gama é desenhado do zero. Utilizamos softwares de ponta para garantir que você visualize exatamente como cada módulo se comportará no seu espaço.</p>
+                    <ul class="features-3d">
+                        <li>Detalhamento de ferragens e acabamentos</li>
+                        <li>Estudo de ergonomia e circulação</li>
+                        <li>Aprovação técnica antes da fabricação</li>
+                    </ul>
+                    <a href="https://wa.me/5528999176166" class="btn-outline">Solicitar meu 3D</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="tecnologia" class="tech-section">
         <div class="container">
@@ -133,4 +156,5 @@
 
     <script>lucide.createIcons();</script>
 </body>
+
 </html>
