--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
 
     <header class="navbar">
-        <div class="logo">GAMA<span>MÓVEIS PLANEJADOS</span></div>
+        <div class="logo-container">
+            <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama Móveis Planejados" class="main-logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Início</a></li>
                 <li><a href="#marca">A Marca</a></li>
                 <li><a href="#portfolio">Coleções</a></li>
+                <li><a href="#projetos3d">Projetos 3D</a></li>
                 <li><a href="#tecnologia">Tecnologia</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
@@ -50,7 +53,7 @@
                     <div class="project-info"><h3>Cozinhas Gourmet</h3><p>Linha Exclusive</p></div>
                 </div>
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipNa-IwC05FotUM9RHLy-sTLnCmIjKF8q2MzNouW=s680-w680-h510-rw" alt="Projeto Gama 2">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipOWDPKn8IRv7f-ka2Z1HDGPaoBfuCVZVefka_SA=s680-w680-h510-rw" alt="Projeto Gama 2">
                     <div class="project-info"><h3>Suítes Master</h3><p>Conforto e Estilo</p></div>
                 </div>
                 <div class="project-card">
@@ -62,16 +65,17 @@
                     <div class="project-info"><h3>Living</h3><p>Design Integrado</p></div>
                 </div>
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipPXJnRgYdf7YHa59XoEj7b1FZeE3smwvN5EZQpR=s680-w680-h510-rw" alt="Projeto Gama 5">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipM2gO_1-KJNVc24C6KW0oN0e3p2DJUCxyQlEBae=s680-w680-h510-rw" alt="Projeto Gama 5">
                     <div class="project-info"><h3>Closets</h3><p>Organização Inteligente</p></div>
                 </div>
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipN2wc2EaNy0SUuyNmmCdH9N52wu_mT_KBZGriSY=s680-w680-h510-rw" alt="Projeto Gama 6">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipN5OL7GYEAC0f73tPG5EdcsmpGhqyX6zP-aQhWN=s680-w680-h510-rw" alt="Projeto Gama 6">
                     <div class="project-info"><h3>Corporativo</h3><p>Escritórios de Luxo</p></div>
                 </div>
             </div>
         </div>
     </section>
+
     <section id="projetos3d" class="section-3d">
         <div class="container">
             <span class="subtitle">Planejamento</span>
@@ -104,17 +108,17 @@
                 <div class="tech-item">
                     <i data-lucide="cpu"></i>
                     <h3>Precisão CNC</h3>
-                    <p>Usinagem milimétrica para encaixes perfeitos.</p>
+                    <p>Usinagem milimétrica com Router Spark 2819 para encaixes perfeitos.</p>
                 </div>
                 <div class="tech-item">
                     <i data-lucide="layers"></i>
                     <h3>Acabamento Industrial</h3>
-                    <p>Padronização de colagem de bordas de alto nível.</p>
+                    <p>Seccionamento Inmes F225 e colagem de bordas de alto padrão.</p>
                 </div>
                 <div class="tech-item">
                     <i data-lucide="monitor"></i>
                     <h3>Projetos 3D</h3>
-                    <p>Visualização realista antes da execução.</p>
+                    <p>Visualização realista e detalhamento técnico antes da execução.</p>
                 </div>
             </div>
         </div>
@@ -140,7 +144,7 @@
     <footer id="contato">
         <div class="footer-grid">
             <div>
-                <h3>GAMA</h3>
+                <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama Logo" style="width: 150px; filter: brightness(0) invert(1); margin-bottom: 20px;">
                 <p>Rua Newton Braga, Wanda Maria, n°89<br>Marataízes - ES</p>
             </div>
             <div>
@@ -156,5 +160,4 @@
 
     <script>lucide.createIcons();</script>
 </body>
-
 </html>
