--- a/index.html
+++ b/index.html
@@ -143,21 +143,35 @@
 
     <footer id="contato">
         <div class="footer-grid">
-            <div>
-                <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama Logo" style="width: 150px; filter: brightness(0) invert(1); margin-bottom: 20px;">
-                <p>Rua Newton Braga, Wanda Maria, n°89<br>Marataízes - ES</p>
+            <div class="footer-column">
+                <img src="https://lh3.googleusercontent.com/gg-dl/AOI_d_-fvPbNVVJxm0pOSZ1uGQtDx2nSsBkHX8twxzqiE-DBZjm6xg8YxdZ4nhiySCrVYQlSyl391Fc3LBvI9nNRPAL8JgQ9Id2kw0MposNWGKz7o6SKE087ePJYpxCwIYZiooYbnpMernTVbamCpIdRDst4nz5eh_-jRIH5UQ4w8ieCv4NBOw=s1024-rj" alt="Gama Logo" class="footer-logo">
+                <p>Mobiliário sob medida com padrão industrial e alma artesanal. Especialistas em transformar ambientes com precisão e design.</p>
+                <div class="inpi-badge">Marca Registrada INPI</div>
             </div>
-            <div>
-                <a href="https://instagram.com/gama.moveisplanejados" target="_blank">Instagram</a><br>
-                <a href="https://wa.me/5528999176166">WhatsApp: (28) 99917-6166</a>
+
+            <div class="footer-column">
+                <h3>Onde Estamos</h3>
+                <p>Rua Newton Braga, Wanda Maria, n°89<br>Marataízes - ES</p>
+                <h3 class="mt-20">Atendimento</h3>
+                <p>Segunda a Sexta: 08h às 18h<br>Sábado: 08h às 12h</p>
+            </div>
+
+            <div class="footer-column">
+                <h3>Contato Direto</h3>
+                <a href="https://wa.me/5528999176166" class="footer-link">
+                    <i data-lucide="phone"></i> (28) 99917-6166
+                </a>
+                <a href="https://instagram.com/gama.moveisplanejados" target="_blank" class="footer-link">
+                    <i data-lucide="instagram"></i> @gama.moveisplanejados
+                </a>
+                <p class="mt-20">Atendemos Marataízes e Região.</p>
             </div>
         </div>
+
+        <div class="footer-bottom">
+            <div class="tech-badges">
+                <span>Precisão Spark 2819</span> | <span>Corte Inmes F225</span> | <span>100% MDF Premium</span>
+            </div>
+            <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
+        </div>
     </footer>
-
-    <a href="https://wa.me/5528999176166" class="whatsapp-float" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-    </a>
-
-    <script>lucide.createIcons();</script>
-</body>
-</html>
