--- a/index.html
+++ b/index.html
@@ -164,14 +164,15 @@
                 <a href="https://instagram.com/gama.moveisplanejados" target="_blank" class="footer-link">
                     <i data-lucide="instagram"></i> @gama.moveisplanejados
                 </a>
-                <p class="mt-20">Atendemos Marataízes e Região.</p>
+                <p class="mt-20">Atendemos Marataízes e todo litoral sul capixaba.</p>
             </div>
         </div>
 
         <div class="footer-bottom">
             <div class="tech-badges">
-                <span>Precisão Spark 2819</span> | <span>Corte Inmes F225</span> | <span>100% MDF Premium</span>
+                <span>Precisão com router CNC</span> | <span>Coladeira de borda automática</span> | <span>100% MDF</span>
             </div>
             <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
+
