--- a/index.html
+++ b/index.html
@@ -140,7 +140,45 @@
             </div>
         </div>
     </section>
-
+<section class="atendimento-cidades">
+    <div class="marquee-title">Cidades Atendidas & Clientes Satisfeitos</div>
+    <div class="marquee">
+        <div class="marquee-content">
+            <span>Marataízes</span>
+            <span>Itapemirim</span>
+            <span>Presidente Kennedy</span>
+            <span>Iconha</span>
+            <span>Cachoeiro de Itapemirim</span>
+            <span>Atílio Vivácqua</span>
+            <span>Rio Novo do Sul</span>
+            <span>Piúma</span>
+            <span>Anchieta</span>
+            <span>Guarapari</span>
+            <span>Meaípe</span>
+            <span>Vitória</span>
+            <span>Vila Velha</span>
+            <span>Cariacica</span>
+            <span>Castelo</span>
+            <span>Laranjeiras</span>
+            <span>Marataízes</span>
+            <span>Itapemirim</span>
+            <span>Presidente Kennedy</span>
+            <span>Iconha</span>
+            <span>Cachoeiro de Itapemirim</span>
+            <span>Atílio Vivácqua</span>
+            <span>Rio Novo do Sul</span>
+            <span>Piúma</span>
+            <span>Anchieta</span>
+            <span>Guarapari</span>
+            <span>Meaípe</span>
+            <span>Vitória</span>
+            <span>Vila Velha</span>
+            <span>Cariacica</span>
+            <span>Castelo</span>
+            <span>Laranjeiras</span>
+        </div>
+    </div>
+</section>
     <footer id="contato">
         <div class="footer-grid">
             <div class="footer-column">
@@ -175,4 +213,5 @@
             <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
+
 
