--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                 <div class="tech-item">
                     <i data-lucide="cpu"></i>
                     <h3>Precisão CNC</h3>
-                    <p>Usinagem milimétrica com Router Spark 2819 para encaixes perfeitos.</p>
+                    <p>Usinagem milimétrica com Router CNC para encaixes perfeitos.</p>
                 </div>
                 <div class="tech-item">
                     <i data-lucide="layers"></i>
                     <h3>Acabamento Industrial</h3>
-                    <p>Seccionamento Inmes F225 e colagem de bordas de alto padrão.</p>
+                    <p>Colagem de bordas automatica com precisão no acabamento.</p>
                 </div>
                 <div class="tech-item">
                     <i data-lucide="monitor"></i>
@@ -213,5 +213,6 @@
             <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
+
 
 
