--- a/index.html
+++ b/index.html
@@ -128,16 +128,7 @@
         <div class="container">
             <span class="subtitle">Depoimentos</span>
             <h2>Satisfação Garantida</h2>
-            <div class="testimonial-grid">
-                <div class="testimonial-card">
-                    <p>"A precisão no acabamento da Gama é impressionante."</p>
-                    <span class="client-name">— Roberto S., Marataízes</span>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Entrega no prazo e qualidade superior."</p>
-                    <span class="client-name">— Ana Paula G., Cachoeiro</span>
-                </div>
-            </div>
+           <script defer async src='https://cdn.trustindex.io/loader.js?7c9e86564ca6804853163b3d08c'></script>
         </div>
     </section>
 <section class="atendimento-cidades">
@@ -213,6 +204,7 @@
             <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
+
 
 
 
