--- a/index.html
+++ b/index.html
@@ -204,6 +204,32 @@
             <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Meu Site no GitHub</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body>
+
+    <header>...</header>
+    <main>...</main>
+    <footer>...</footer>
+
+    <style>
+        /* Cole aqui todo o bloco <style> que te passei */
+    </style>
+
+    <div class="whatsapp-container">
+        <div class="whatsapp-message">
+            Como posso te ajudar? 😊
+        </div>
+        <a href="https://wa.me/5500999999999" class="whatsapp-float" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+    </div>
+    </body> </html>
 
 
 
