--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Meu Site no GitHub</title>
+    <title>Gama Móveis Planejados</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -225,11 +225,12 @@
         <div class="whatsapp-message">
             Como posso te ajudar? 😊
         </div>
-        <a href="https://wa.me/5500999999999" class="whatsapp-float" target="_blank">
+        <a href="https://wa.me/5528999176166" class="whatsapp-float" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
         </a>
     </div>
     </body> </html>
+
 
 
 
