--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#home">Início</a></li>
                 <li><a href="#marca">A Marca</a></li>
                 <li><a href="#portfolio">Coleções</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#projetos3d">Projetos 3D</a></li>
                 <li><a href="#tecnologia">Tecnologia</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -230,6 +231,7 @@
         </a>
     </div>
     </body> </html>
+
 
 
 
