--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gama Móveis Planejados | Design & Sofisticação</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -28,7 +29,6 @@
     </header>
 
     <section id="home" class="hero">
-        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>A ARTE DE MORAR BEM</h1>
             <p>Mobiliário de alto padrão com precisão industrial e alma artesanal.</p>
@@ -50,28 +50,16 @@
             <h2>Nossas Criações</h2>
             <div class="gallery-grid">
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipMsM93NkRtaSotHhS_JxFGCoMP8PFOmNaCyKTP6=s680-w680-h510-rw" alt="Projeto Gama 1">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipMsM93NkRtaSotHhS_JxFGCoMP8PFOmNaCyKTP6=s680-w680-h510-rw" alt="Cozinhas">
                     <div class="project-info"><h3>Cozinhas Gourmet</h3><p>Linha Exclusive</p></div>
                 </div>
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipOWDPKn8IRv7f-ka2Z1HDGPaoBfuCVZVefka_SA=s680-w680-h510-rw" alt="Projeto Gama 2">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipOWDPKn8IRv7f-ka2Z1HDGPaoBfuCVZVefka_SA=s680-w680-h510-rw" alt="Suítes">
                     <div class="project-info"><h3>Suítes Master</h3><p>Conforto e Estilo</p></div>
                 </div>
                 <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipMPhbr1Yvr9ZkJa4IFM7wvIn9_FVtIgpP7UXuqQ=s680-w680-h510-rw" alt="Projeto Gama 3">
-                    <div class="project-info"><h3>Detalhes</h3><p>Acabamento Premium</p></div>
-                </div>
-                <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipNtdCSb9Pb7DAO1YAAsDwSV8Fx5bR_KNIJB8vzg=s680-w680-h510-rw" alt="Projeto Gama 4">
-                    <div class="project-info"><h3>Living</h3><p>Design Integrado</p></div>
-                </div>
-                <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipM2gO_1-KJNVc24C6KW0oN0e3p2DJUCxyQlEBae=s680-w680-h510-rw" alt="Projeto Gama 5">
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipM2gO_1-KJNVc24C6KW0oN0e3p2DJUCxyQlEBae=s680-w680-h510-rw" alt="Closets">
                     <div class="project-info"><h3>Closets</h3><p>Organização Inteligente</p></div>
-                </div>
-                <div class="project-card">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipN5OL7GYEAC0f73tPG5EdcsmpGhqyX6zP-aQhWN=s680-w680-h510-rw" alt="Projeto Gama 6">
-                    <div class="project-info"><h3>Corporativo</h3><p>Escritórios de Luxo</p></div>
                 </div>
             </div>
         </div>
@@ -83,17 +71,14 @@
             <h2>Do 3D à Realidade</h2>
             <div class="grid-3d">
                 <div class="card-3d">
-                    <div class="badge">Projeto 3D</div>
-                    <img src="https://images.unsplash.com/photo-1617103996702-96ff29b1c467?q=80&w=1600&auto=format&fit=crop" alt="Renderização 3D">
-                    <p>Visualização realista com texturas e iluminação fiel ao projeto final.</p>
+                    <img src="https://images.unsplash.com/photo-1617103996702-96ff29b1c467?q=80&w=1600" alt="3D">
                 </div>
                 <div class="content-3d">
                     <h3>Tecnologia de Visualização</h3>
-                    <p>Cada ambiente na Gama é desenhado do zero. Utilizamos softwares de ponta para garantir que você visualize exatamente como cada módulo se comportará no seu espaço.</p>
+                    <p>Cada ambiente na Gama é desenhado do zero com precisão milimétrica.</p>
                     <ul class="features-3d">
-                        <li>Detalhamento de ferragens e acabamentos</li>
-                        <li>Estudo de ergonomia e circulação</li>
-                        <li>Aprovação técnica antes da fabricação</li>
+                        <li>Detalhamento de ferragens premium</li>
+                        <li>Aprovação técnica via software</li>
                     </ul>
                     <a href="https://wa.me/5528999176166" class="btn-outline">Solicitar meu 3D</a>
                 </div>
@@ -106,135 +91,46 @@
             <span class="subtitle">Engenharia</span>
             <h2>Processo Tecnológico</h2>
             <div class="tech-grid">
-                <div class="tech-item">
-                    <i data-lucide="cpu"></i>
-                    <h3>Precisão CNC</h3>
-                    <p>Usinagem milimétrica com Router CNC para encaixes perfeitos.</p>
-                </div>
-                <div class="tech-item">
-                    <i data-lucide="layers"></i>
-                    <h3>Acabamento Industrial</h3>
-                    <p>Colagem de bordas automatica com precisão no acabamento.</p>
-                </div>
-                <div class="tech-item">
-                    <i data-lucide="monitor"></i>
-                    <h3>Projetos 3D</h3>
-                    <p>Visualização realista e detalhamento técnico antes da execução.</p>
-                </div>
+                <div class="tech-item"><i data-lucide="cpu"></i><h3>Precisão CNC</h3><p>Router CNC Spark 2819.</p></div>
+                <div class="tech-item"><i data-lucide="layers"></i><h3>Acabamento</h3><p>Inmes F225 automática.</p></div>
             </div>
         </div>
     </section>
 
-    <section class="testimonials">
-        <div class="container">
-            <span class="subtitle">Depoimentos</span>
-            <h2>Satisfação Garantida</h2>
-           <script defer async src='https://cdn.trustindex.io/loader.js?7c9e86564ca6804853163b3d08c'></script>
+    <section class="atendimento-cidades">
+        <div class="marquee">
+            <div class="marquee-content">
+                <span>Marataízes • Itapemirim • Cachoeiro • Vitória • Vila Velha • Guarapari • Anchieta • Piúma • Iconha • Rio Novo • Castelo</span>
+                <span>Marataízes • Itapemirim • Cachoeiro • Vitória • Vila Velha • Guarapari • Anchieta • Piúma • Iconha • Rio Novo • Castelo</span>
+            </div>
         </div>
     </section>
-<section class="atendimento-cidades">
-    <div class="marquee-title">Cidades Atendidas & Clientes Satisfeitos</div>
-    <div class="marquee">
-        <div class="marquee-content">
-            <span>Marataízes</span>
-            <span>Itapemirim</span>
-            <span>Presidente Kennedy</span>
-            <span>Iconha</span>
-            <span>Cachoeiro de Itapemirim</span>
-            <span>Atílio Vivácqua</span>
-            <span>Rio Novo do Sul</span>
-            <span>Piúma</span>
-            <span>Anchieta</span>
-            <span>Guarapari</span>
-            <span>Meaípe</span>
-            <span>Vitória</span>
-            <span>Vila Velha</span>
-            <span>Cariacica</span>
-            <span>Castelo</span>
-            <span>Laranjeiras</span>
-            <span>Marataízes</span>
-            <span>Itapemirim</span>
-            <span>Presidente Kennedy</span>
-            <span>Iconha</span>
-            <span>Cachoeiro de Itapemirim</span>
-            <span>Atílio Vivácqua</span>
-            <span>Rio Novo do Sul</span>
-            <span>Piúma</span>
-            <span>Anchieta</span>
-            <span>Guarapari</span>
-            <span>Meaípe</span>
-            <span>Vitória</span>
-            <span>Vila Velha</span>
-            <span>Cariacica</span>
-            <span>Castelo</span>
-            <span>Laranjeiras</span>
-        </div>
-    </div>
-</section>
+
     <footer id="contato">
         <div class="footer-grid">
             <div class="footer-column">
-                <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama Logo" class="footer-logo">
-                <p>Mobiliário sob medida com padrão industrial e alma artesanal. Especialistas em transformar ambientes com precisão e design.</p>
-                <div class="inpi-badge">Marca Registrada INPI</div>
+                <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama" class="footer-logo">
+                <p>Especialistas em transformar ambientes com precisão industrial.</p>
             </div>
-
             <div class="footer-column">
                 <h3>Onde Estamos</h3>
-                <p>Rua Newton Braga, Wanda Maria, n°89<br>Marataízes - ES</p>
-                <h3 class="mt-20">Atendimento</h3>
-                <p>Segunda a Sexta: 08h às 18h<br>Sábado: 08h às 12h</p>
+                <p>Rua Newton Braga, n°89, Marataízes - ES</p>
             </div>
-
             <div class="footer-column">
-                <h3>Contato Direto</h3>
-                <a href="https://wa.me/5528999176166" class="footer-link">
-                    <i data-lucide="phone"></i> (28) 99917-6166
-                </a>
-                <a href="https://instagram.com/gama.moveisplanejados" target="_blank" class="footer-link">
-                    <i data-lucide="instagram"></i> @gama.moveisplanejados
-                </a>
-                <p class="mt-20">Atendemos Marataízes e todo litoral sul capixaba.</p>
+                <h3>Contato</h3>
+                <p>(28) 99917-6166</p>
+                <p>@gama.moveisplanejados</p>
             </div>
-        </div>
-
-        <div class="footer-bottom">
-            <div class="tech-badges">
-                <span>Precisão com router CNC</span> | <span>Coladeira de borda automática</span> | <span>100% MDF</span>
-            </div>
-            <p>&copy; 2026 Gama Móveis Planejados - Todos os direitos reservados.</p>
         </div>
     </footer>
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Gama Móveis Planejados</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
-<body>
-
-    <header>...</header>
-    <main>...</main>
-    <footer>...</footer>
-
-    <style>
-        /* Cole aqui todo o bloco <style> que te passei */
-    </style>
 
     <div class="whatsapp-container">
-        <div class="whatsapp-message">
-            Como posso te ajudar? 😊
-        </div>
+        <div class="whatsapp-message">Como posso te ajudar? 😊</div>
         <a href="https://wa.me/5528999176166" class="whatsapp-float" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
         </a>
     </div>
-    </body> </html>
 
-
-
-
-
-
-
+    <script>lucide.createIcons();</script>
+</body>
+</html>
