--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="navbar">
         <div class="logo-container">
-            <img src="https://lh3.googleusercontent.com/p/AF1QipOblPvJ-VKc9hfhtnPkU8vkjPXs-D2dP1mIAIq-=w141-h141-n-k-no-nu" alt="Gama Móveis Planejados" class="main-logo">
+            <img src="https://github.com/jonascapixaba93/site-gama-moveis-teste/blob/main/Logo%20PNG%20Branca%20Hor.png?raw=true" alt="Gama Móveis Planejados" class="main-logo">
         </div>
         <nav>
             <ul>
@@ -134,4 +134,5 @@
     <script>lucide.createIcons();</script>
 </body>
 </html>
+
 
