--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <header class="navbar">
         <div class="logo-container">
-            <a href="index.html"><img src="https://lh3.googleusercontent.com/gg-dl/AOI_d_-fvPbNVVJxm0pOSZ1uGQtDx2nSsBkHX8twxzqiE-DBZjm6xg8YxdZ4nhiySCrVYQlSyl391Fc3LBvI9nNRPAL8JgQ9Id2kw0MposNWGKz7o6SKE087ePJYpxCwIYZiooYbnpMernTVbamCpIdRDst4nz5eh_-jRIH5UQ4w8ieCv4NBOw=s1024-rj" alt="Gama" class="main-logo"></a>
+            <a href="index.html"><img src="https://github.com/jonascapixaba93/site-gama-moveis-teste/blob/main/Logo%20PNG%20Branca%20Hor.png?raw=true" alt="Gama" class="main-logo"></a>
         </div>
         <nav>
             <ul>
