--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <footer id="contato">
         <div class="footer-grid">
             <div class="footer-column">
-                <img src="https://lh3.googleusercontent.com/a-/ALV-UjVINiMMSV9Uo9Ojs8KC2T2pCx6nIier637p4qP1AuJRseIfhwPw=s265-w265-h265" alt="Gama" class="footer-logo">
+                <img src="https://github.com/jonascapixaba93/site-gama-moveis-teste/blob/main/Logo%20PNG%20Branca%20Hor.png?raw=true" alt="Gama" class="footer-logo">
                 <p>Especialistas em transformar ambientes com precisão industrial.</p>
             </div>
             <div class="footer-column">
@@ -134,5 +134,6 @@
     <script>lucide.createIcons();</script>
 </body>
 </html>
+
 
 
