--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                 <p>@gama.moveisplanejados</p>
             </div>
         </div>
+        <footer id="contato">
+        <div class="footer-bottom" style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #222; text-align: center;">
+            <p style="font-size: 0.7rem; color: #555; letter-spacing: 1px;">
+                © 2026 Gama Móveis Planejados - Todos os direitos reservados.
+            </p>
+        </div>
     </footer>
 
     <div class="whatsapp-container">
@@ -134,6 +140,7 @@
     <script>lucide.createIcons();</script>
 </body>
 </html>
+
 
 
 
